# lavendeux-parser2

./: Cargo.toml  documentation.html  documentation.md  grammar.cfg  grammar.pest  language-docs.md  tarpaulin-report.html
.github/workflows/: rust.yml
benches/: benchmark_macro.rs  load_data.rs  load_script.rs
doc/: documentation.html  rustdoc.css
example_extensions/: lavendeux-colour.js  simple_extension.js  stateful_functions.js  zarbans_grotto.js
example_scripts/: emoji.lav  self_test.lav  stdlib.lav  zarban_storydata.lav  zarbans_grotto.lav
example_scripts/stdlib/: array.lav  bitwise.lav  math.lav  string.lav  system.lav
examples/: interactive_console.rs  load_stdlib.rs  stdlib_example.lav
examples/stdlib/: array.lav  string.lav  system.lav
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
scripts/: fuzzer.sh  gen_docs.sh  test.bat  test.sh
src/: error.rs  grammar.pest  language_docs.rs  lavendeux.rs  lib.rs  memory_manager.rs  network_utils.rs  pest.rs  pre_grammar.pest  preprocessor.rs  state.rs  token.rs  user_function.rs
src/documentation/: markdown.rs  mod.rs  operator_documentation.rs  plain.rs  static_docs.rs
src/error/: error.rs  error_details.rs  macros.rs  mod.rs  traits.rs
src/extensions/: controller.rs  extension.rs  mod.rs  runtime.rs  worker.rs
src/extensions/js/: lavendeux.ts
src/extensions_old/: controller.rs  extension.rs  js_extension.rs  mod.rs  runtime.rs  worker.rs
src/extensions_old/js/: entrypoint.ts  extension.ts  runtime.ts  value.js
src/functions/: compiler_cache.rs  documentation.rs  macros.rs  mod.rs  std_function.rs  stdlib.rs  user_function.rs
src/functions/stdlib/: bitwise.rs  collections.rs  decorators_currency.rs  decorators_numeric.rs  decorators_types.rs  dev.rs  math.rs  network.rs  random.rs  string.rs  system.rs  trig.rs
src/network/: api.rs  defaults.rs  mod.rs  registry.rs  util.rs
src/old_functions/: decorator_function.rs  macros.rs  mod.rs  std_function.rs
src/old_functions/stdlib/: array.rs  bitwise.rs  decorators.rs  dev.rs  math.rs  network.rs  string.rs  system.rs  trig.rs
src/old_functions/stdlib/decorators/: currency.rs  numeric.rs  types.rs
src/std_functions/: decorator_function.rs  help.rs  macros.rs  mod.rs  std_function.rs
src/std_functions/stdlib/: array.rs  bitwise.rs  decorators.rs  dev.rs  math.rs  network.rs  string.rs  system.rs  trig.rs
src/std_functions/stdlib/decorators/: currency.rs  numeric.rs  types.rs
src/syntax_tree/: assignment_target.rs  macros.rs  mod.rs  node.rs  nodes.rs  pair.rs  pratt.rs  resolver.rs  traits.rs
src/syntax_tree/node/: arithmetic.rs  assignment.rs  bitwise.rs  boolean.rs  collections.rs  control.rs  core.rs  error.rs  errors.rs  function.rs  functions.rs  keyword.rs  literals.rs  matching.rs  unary.rs  values.rs
src/syntax_tree/nodes/: arithmetic.rs  assignment.rs  bitwise.rs  boolean.rs  collections.rs  conditionals.rs  core.rs  functions.rs  iterators.rs  literals.rs  values.rs
src/syntax_tree/pratt/: mod.rs  node.rs  pair.rs  parser.rs
src/syntax_tree1/: node.rs  resolver.rs
src/syntax_tree1/node/: arithmetic.rs  assignment.rs  bitwise.rs  boolean.rs  collections.rs  core.rs  errors.rs  functions.rs  keyword.rs  literals.rs  matching.rs
src/syntax_tree1/pratt/: mod.rs  node.rs  pair.rs  parser.rs  precedence_map.rs
