[package]
name = "lavendeux-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["all-functions"]
extensions = ["rustyscript"]

all-functions = ["encoding-functions", "network-functions", "crypto-functions"]

encoding-functions = ["base64", "urlencoding"]
network-functions = ["reqwest"]
crypto-functions = ["md-5", "sha2", "rand"]

[dependencies]

# PEST Parser dependencies, for tokenization
pest = "2.7.5"
pest_derive = {version = "2.7.5", features = ["grammar-extras"] }

# Serde, for serialization features
serde = "1.0.193"
serde_json = "1.0.108"

# For static initializers
once_cell = "1.18.0"
lazy_static = "1.4.0"

# Error type definition
thiserror = "1.0.50"

# Main value for the parse tree
#polyvalue = "0.2.2"
polyvalue = {git = "https://github.com/rscarson/polyvalue.git"}

# For collecting functions and nodes
paste = "1.0.14"
inventory = "0.3.15"

# For documentation writeout
indoc = "2"

#
# dependencies for functions and decorators
#

chrono = "0.4.23"
reqwest = {version = "0.11.20", features = ["blocking"], optional = true }
rustyscript = {version = "0.2.1", optional = true }

base64 = { version = "0.21.0", optional = true }
urlencoding = { version = "2.1.2", optional = true }

md-5 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
mockito = "1.2.0" # For network tests
