[package]
name = "lavendeux-parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["all-functions"]

all-functions = ["encoding-functions", "network-functions", "crypto-functions"]

encoding-functions = ["base64", "urlencoding"]
network-functions = ["reqwest"]
crypto-functions = ["md-5", "sha2", "rand"]

[dependencies]

# For stack protection
stacker = "=0.1.15"

# PEST Parser dependencies, for tokenization
#faster-pest = "0.1.4"
pest = "2.7.5"
pest_derive = {version = "2.7.5", features = ["grammar-extras"] }

# Serde, for serialization features
serde = "1.0.193"
serde_json = "1.0.108"

# For static initializers
once_cell = "1.18.0"
lazy_static = "1.4.0"

# Error type definition
thiserror = "1.0.50"

# Main value for the parse tree
polyvalue = "0.3.0"

# For collecting functions and nodes
enum_dispatch = "0.3.12"
paste = "1.0.14"
inventory = "0.3.15"

# For documentation writeout
indoc = "2"

#
# dependencies for functions and decorators
#

chrono = "0.4.23"
reqwest = {version = "0.12.0", features = ["blocking"], optional = true }

base64 = { version = "0.22.0", optional = true }
urlencoding = { version = "2.1.2", optional = true }

md-5 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
mockito = "1.2.0" # For network tests
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "load_script"
harness = false

[[bench]]
name = "load_data"
harness = false

[[bin]]
name = "generate_docs"

[[bin]]
name = "coverage_report"

[profile.release]
debug = true
