[package]
name = "Inflector-fuzz"
version = "0.0.0"
publish = false
edition = "2015"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
Inflector = "0.11.4"

lavendeux-parser = {path = "..", features = ["all-functions"]}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
